tests/rosetta/out/C/anagrams-deranged-anagrams.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
const char *sortRunes(char *s) {
  list_string tmp1 = {0, NULL};
  int arr = tmp1;
  int i = 0;
  while (i < strlen(s)) {
    char *tmp2 = slice_string(s, i, i + 1);
    list_string tmp3 = list_string_create(1);
    tmp3.data[0] = tmp2;
    list_string tmp4 = concat_list_string(arr, tmp3);
    arr = tmp4;
    i = i + 1;
  }
  int n = arr.len;
  int m = 0;
  while (m < n) {
    int j = 0;
    while (j < n - 1) {
      if ((strcmp(arr.data[j], arr.data[j + 1]) > 0)) {
        const char *tmp = arr.data[j];
        arr.data[j] = arr.data[j + 1];
        arr.data[j + 1] = tmp;
      }
      j = j + 1;
    }
    m = m + 1;
  }
  const char *out = "";
  i = 0;
  while (i < n) {
    char *tmp5 = concat_string(out, arr.data[i]);
    out = tmp5;
    i = i + 1;
  }
  return out;
}

int deranged(char *a, char *b) {
  if (strlen(a) != strlen(b)) {
    return 0;
  }
  int i = 0;
  while (i < strlen(a)) {
    char *tmp6 = slice_string(a, i, i + 1);
    char *tmp7 = slice_string(b, i, i + 1);
    if ((strcmp(tmp6, tmp7) == 0)) {
      return 0;
    }
    i = i + 1;
  }
  return 1;
}

int main() {
  list_string words = list_string_create(2);
  words.data[0] = "constitutionalism";
  words.data[1] = "misconstitutional";
  int words = words;
  map_string_int tmp8 = map_string_int_create(0);
  int m = tmp8;
  int bestLen = 0;
  const char *w1 = "";
  const char *w2 = "";
  for (int tmp9 = 0; tmp9 < words.len; tmp9++) {
    char *w = words.data[tmp9];
    if (strlen(w) <= bestLen) {
      continue;
    }
    const char *k = sortRunes(w);
    if ((!(k in m))) {
      list_string tmp10 = list_string_create(1);
      tmp10.data[0] = w;
      list_string tmp11 = list_string_create(1);
      tmp11.data[0] = w;
      m.data[k] = tmp11;
      continue;
    }
    for (int tmp12 = 0; tmp12 < m.data[k].len; tmp12++) {
      const char *c = m.data[k].data[tmp12];
      if (deranged(w, c)) {
        bestLen = strlen(w);
        w1 = c;
        w2 = w;
        break;
      }
    }
    list_string tmp13 = list_string_create(1);
    tmp13.data[0] = w;
    list_string tmp14 = concat_list_string(m.data[k], tmp13);
    list_string tmp15 = list_string_create(1);
    tmp15.data[0] = w;
    list_string tmp16 = concat_list_string(m.data[k], tmp15);
    m.data[k] = tmp16;
  }
  char *tmp17 = concat_string(w1, " ");
  char *tmp18 = concat_string(tmp17, w2);
  char *tmp19 = concat_string(tmp18, " : Length ");
  char *tmp20 = _str(bestLen);
  char *tmp21 = concat_string(tmp19, tmp20);
  printf("%s\n", tmp21);
}

int main() {
  main();
  return 0;
}
